--- a/ToDo/Content/Site.css
+++ b/ToDo/Content/Site.css
@@ -22,3 +22,13 @@ select,
 textarea {
     max-width: 280px;
 }
+
+
+/* Bootstrap overrides*/
+.input-validation-error {
+    border: 1px solid red;
+}
+
+.field-validation-error {
+    color: red;
+}
