--- a/ToDo/Views/Home/Index.cshtml
+++ b/ToDo/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<ToDo.Core.Models.ToDoList>
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -12,4 +13,47 @@
 else
 {
     <h2>My ToDo List</h2>
+    @Html.ActionLink("New ToDo",
+        "Index",
+        "ToDo",
+        null,
+        new { @class = "btn btn-default"})
+    <br/>
+    <br/>
+    <table class="table table-bordered">
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Time</th>
+            <th>Priority</th>
+            <th>Created At</th>
+            <th>Updated At</th>
+            <th>Status</th>
+            <th>Action</th>
+        </tr>
+        </thead>
+        <tbody>
+            @foreach (var todo in Model)
+            {
+                <tr>
+                    <td>@todo.Name</td>
+                    <td>@todo.Description</td>
+                    <td>@todo.Time.ToString("dd MMM yyy // HH:mm")</td>
+                    <td>@todo.ToDoPriorities.Name</td>
+                    <td>@todo.CreatedAt</td>
+                    <td>@todo.UpdatedAt</td>
+                    <td>@todo.ToDoStatus</td>
+                    <td>
+                        @Html.ActionLink("Edit",
+                            "Edit",
+                            "ToDo",
+                            new { id = todo.Id},
+                            new { @class = "btn-link"})
+                        <button class="btn-link">Delete</button>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
