--- a/ToDo/Views/Home/Index.cshtml
+++ b/ToDo/Views/Home/Index.cshtml
@@ -14,33 +14,50 @@
 else
 {
     <h2>My ToDo List</h2>
-    @Html.ActionLink("New ToDo",
-        "Index",
-        "ToDo",
-        null,
-        new { @class = "btn btn-default"})
+    <div>
+        <div>
+            @Html.ActionLink("New ToDo",
+                "Index",
+                "ToDo",
+                null,
+                new {@class = "btn btn-default"})
+        </div>
+        
+        <div class="pull-right">
+            @Html.ActionLink("Oldest",
+                "SortAscending",
+                "Home",
+                null,
+                new { @class = "btn btn-default" })
+            @Html.ActionLink("Newest",
+                "SortDescending",
+                "Home",
+                null,
+                new { @class = "btn btn-default" })
+        </div>
+    </div>
+    
+
     <br/>
     <br/>
     <table class="table table-bordered">
         <thead>
-        <tr>
-            <th>
-                @Html.ActionLink("Name", "SortByName", "Home")
-            </th>
-            <th>Description</th>
-            <th>Time</th>
-            <th>
-                @Html.ActionLink("Priority", "SortByPriority", "Home")
-            </th>
-            <th>
-                @Html.ActionLink("Created At", "FilterByCreatedAt", "Home")
-            </th>
-            <th>Updated At</th>
-            <th>
-                @Html.ActionLink("Status", "SortByStatus", "Home")
-            </th>
-            <th>Action</th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.ActionLink("Name", "SortByName", "Home")
+                </th>
+                <th>Description</th>
+                <th>Time</th>
+                <th>
+                    @Html.ActionLink("Priority", "SortByPriority", "Home")
+                </th>
+                <th>Created At.</th>
+                <th>Updated At</th>
+                <th>
+                    @Html.ActionLink("Status", "SortByStatus", "Home")
+                </th>
+                <th>Action</th>
+            </tr>
         </thead>
         <tbody>
             @foreach (var todo in Model)
@@ -50,7 +67,7 @@ else
                     <td>@todo.Description</td>
                     <td>@todo.Time.ToString("dd MMM yyy // HH:mm")</td>
                     <td>@todo.ToDoPriorities.Name</td>
-                    <td>@todo.CreatedAt</td>
+                    <td class="js-created-todo">@todo.CreatedAt</td>
                     <td>@todo.UpdatedAt</td>
                     <td>
                         <button data-id-attr="@todo.Id" class="btn-link js-status-todo">@todo.ToDoStatus</button>
@@ -59,8 +76,8 @@ else
                         @Html.ActionLink("Edit",
                             "Edit",
                             "ToDo",
-                            new { id = todo.Id},
-                            new { @class = "btn-link"})
+                            new { id = todo.Id },
+                            new { @class = "btn-link" })
                         <button data-id-attr="@todo.Id" class="btn-link js-delete-todo">Delete</button>
                     </td>
                 </tr>
@@ -77,7 +94,7 @@ else
                 var deleteButton = $(e.target);
                 if (confirm("Are you sure you want to delete this ToDo")) {
                     $.ajax({
-                            url: "/api/todos/" + deleteButton.attr("data-id-attr"),
+                            url: "/api/toDos/" + deleteButton.attr("data-id-attr"),
                             method: "DELETE"
                         })
                         .done(function() {
@@ -94,7 +111,7 @@ else
                 var statusButton = $(e.target);
                 if (!statusButton.parents('tr').hasClass("new-color")) {
                     $.ajax({
-                            url: "/api/todos/" + statusButton.attr("data-id-attr"),
+                            url: "/api/toDos/" + statusButton.attr("data-id-attr"),
                             method: "PUT"
                         })
                         .done(function() {
@@ -105,7 +122,7 @@ else
                         });
                 } else {
                     $.ajax({
-                            url: "/api/todos/" + statusButton.attr("data-id-attr"),
+                            url: "/api/toDos/" + statusButton.attr("data-id-attr"),
                             method: "PUT"
                         })
                         .done(function() {
@@ -118,6 +135,35 @@ else
                 }
                 
             });
+            //$(".js-toggle-created").on("click",
+            //    function(e) {
+            //        var toggleButton = $(e.target);
+            //        var newTableCell = $(".js-created-todo");
+            //        var url = "/api/toDos/orderBy";
+            //
+            //        $.getJSON(url,
+            //            function (data) {
+            //                newTableCell.replaceWith('<td>' + data[0].CreatedAt + '</td>');
+            //                for (var i = 0; i < data.length; i++) {
+            //                    
+            //                }
+            //                console.log(data);
+            //            });
+                    //$.ajax({
+                    //        url: "/api/toDos/orderBy",
+                    //        method: "GET"
+                    //    })
+                    //    .done(function() {
+                    //        
+                    //    });
+                //});
+            //    .fail(function() {
+            //        var trHtml = '';
+            //        $.each(data, function(i, item) {
+            //            trHtml += '<tr><td>' + item.name + '</td><td>' + item.description + '</td></tr>';
+            //            td.replaceWith(trHtml);
+            //    });
+            //});
         });
     </script>
 }
