Added time/date filtering

--- a/ToDo/Views/Account/Login.cshtml
+++ b/ToDo/Views/Account/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ToDo.Core.ViewModels.OAuthViewModels
-@model ToDo.Core.Models.ToDo.ViewModels.OAuthViewModels.LoginViewModel
+@model LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
