--- a/ToDo/Views/Home/Index.cshtml
+++ b/ToDo/Views/Home/Index.cshtml
@@ -54,7 +54,7 @@ else
                 <th>Created At.</th>
                 <th>Updated At</th>
                 <th>
-                    @Html.ActionLink("Status", "SortByStatus", "Home")
+                    @Html.ActionLink("StatusController", "SortByStatus", "Home")
                 </th>
                 <th>Action</th>
             </tr>
@@ -80,7 +80,7 @@ else
                             "ToDo",
                             new { id = todo.Id },
                             new { @class = "btn-link" })
-                        <button data-id-attr="@todo.Id" class="btn-link js-delete-todo">Delete</button>
+                        <button data-id-attr="@todo.Id" class="btn-link js-delete-todo">StatusController</button>
                     </td>
                 </tr>
             }
@@ -92,80 +92,7 @@ else
 {
     <script>
         $(document).ready(function() {
-            $(".js-delete-todo").on("click", function (e) {
-                var deleteButton = $(e.target);
-                if (confirm("Are you sure you want to delete this ToDo")) {
-                    $.ajax({
-                            url: "/api/toDos/" + deleteButton.attr("data-id-attr"),
-                            method: "DELETE"
-                        })
-                        .done(function() {
-                            deleteButton.closest('tr').remove();
-                        })
-                        .fail(function() {
-                            alert("fail");
-                        });
-                }
-            });
-
-            
-            $(".js-status-todo").on("click", function(e) {
-                var statusButton = $(e.target);
-                if (!statusButton.parents('tr').hasClass("new-color")) {
-                    $.ajax({
-                            url: "/api/toDos/" + statusButton.attr("data-id-attr"),
-                            method: "PUT"
-                        })
-                        .done(function() {
-                            statusButton
-                                .text("Done")
-                                .parents('tr')
-                                .addClass("new-color");
-                        });
-                } else {
-                    $.ajax({
-                            url: "/api/toDos/" + statusButton.attr("data-id-attr"),
-                            method: "PUT"
-                        })
-                        .done(function() {
-                            statusButton
-                                .text("Open")
-                                .parents('tr')
-                                .removeClass("new-color");
-                        });
-
-                }
-                
-            });
-            //$(".js-toggle-created").on("click",
-            //    function(e) {
-            //        var toggleButton = $(e.target);
-            //        var newTableCell = $(".js-created-todo");
-            //        var url = "/api/toDos/orderBy";
-            //
-            //        $.getJSON(url,
-            //            function (data) {
-            //                newTableCell.replaceWith('<td>' + data[0].CreatedAt + '</td>');
-            //                for (var i = 0; i < data.length; i++) {
-            //                    
-            //                }
-            //                console.log(data);
-            //            });
-                    //$.ajax({
-                    //        url: "/api/toDos/orderBy",
-                    //        method: "GET"
-                    //    })
-                    //    .done(function() {
-                    //        
-                    //    });
-                //});
-            //    .fail(function() {
-            //        var trHtml = '';
-            //        $.each(data, function(i, item) {
-            //            trHtml += '<tr><td>' + item.name + '</td><td>' + item.description + '</td></tr>';
-            //            td.replaceWith(trHtml);
-            //    });
-            //});
+            StatusController.statusChange();
         });
     </script>
 }
