--- a/ToDo/Views/Shared/_Layout.cshtml
+++ b/ToDo/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
     </div>
 
     @Scripts.Render("~/bundles/lib")
+    @Scripts.Render("~/bundles/app")
     @RenderSection("scripts", required: false)
 </body>
 </html>
