--- a/ToDo/Views/Account/SendCode.cshtml
+++ b/ToDo/Views/Account/SendCode.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ToDo.Core.ViewModels.OAuthViewModels.SendCodeViewModel
 @{
-    ViewBag.Title = "Send";
+    ViewBag.Title = "SendAnHourBefore";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("SendCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
     @Html.AntiForgeryToken()
     @Html.Hidden("rememberMe", @Model.RememberMe)
-    <h4>Send verification code</h4>
+    <h4>SendAnHourBefore verification code</h4>
     <hr />
     <div class="row">
         <div class="col-md-8">
