--- a/ToDo/Views/Home/About.cshtml
+++ b/ToDo/Views/Home/About.cshtml
@@ -1,7 +1,9 @@
-﻿@{
+﻿@using ToDo.Core.Models
+@{
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+@Model
+
