--- a/ToDo/Views/Home/Index.cshtml
+++ b/ToDo/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@using System.Configuration
+@using Microsoft.AspNet.Identity
 @using ToDo.Core.Models
 @model IEnumerable<ToDo.Core.ViewModels.ToDoViewModel>
 @{
     ViewBag.Title = "Home Page";
+    var userId = User.Identity.GetUserId();
 }
 
 @if (!User.Identity.IsAuthenticated)
@@ -82,14 +84,10 @@ else
                         <button data-id-attr="@todo.Id" class="btn-link js-delete-todo">Delete</button>
                     </td>
                 </tr>
-                if (time.TotalMinutes <= 60 && time.TotalMinutes > 30 && !EmailSender.Hour)
-                {
-                    EmailSender.SendAnHourBefore(todo);
-                }
-                else if (time.TotalMinutes <= 30 && EmailSender.HalfAnHour)
-                {
-                    EmailSender.SendHalfAnHourBefore(todo);
-                }
+                    EmailSender.SendAnHourBefore(todo, userId, time);
+                
+                    EmailSender.SendHalfAnHourBefore(todo, userId, time);
+                
             }
         </tbody>
     </table>
