Refactored the rest of JS

--- a/ToDo/Views/Home/Index.cshtml
+++ b/ToDo/Views/Home/Index.cshtml
@@ -98,6 +98,7 @@ else
     <script>
         $(document).ready(function() {
             StatusController.statusChange();
+            StatusDelete.deleteToDo();
         });
     </script>
 }
