--- a/ToDo/Content/Site.css
+++ b/ToDo/Content/Site.css
@@ -36,6 +36,10 @@ textarea {
     color: white;
 }
 
+.btn-custom-margin {
+    margin-right: 4px;
+}
+
 /* Bootstrap overrides*/
 .input-validation-error {
     border: 1px solid red;
