--- a/ToDo/Views/Home/Index.cshtml
+++ b/ToDo/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using ToDo.Core.Models
+﻿@using Microsoft.AspNet.Identity
+@using ToDo.Core.Models
 @using ToDo.Persistence.Email
 @model IEnumerable<ToDo.Core.ViewModels.ToDoViewModel>
 @{
@@ -65,25 +66,29 @@ else
         <tbody>
             @foreach (var todo in Model)
             {
-                <tr class="@(todo.ToDoStatus == ToDoStatus.Open ? "" : "new-color")">
-                    <td>@todo.Name</td>
-                    <td>@todo.Description</td>
-                    <td>@todo.Time.ToString("dd MMM yyy // HH:mm")</td>
-                    <td>@todo.ToDoPriorities.Name</td>
-                    <td class="js-created-todo">@todo.CreatedAt</td>
-                    <td>@todo.UpdatedAt</td>
-                    <td>
-                        <button data-id-attr="@todo.Id" class="btn-link js-status-todo">@todo.ToDoStatus</button>
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit",
-                            "Edit",
-                            "ToDo",
-                            new { id = todo.Id },
-                            new { @class = "btn-link" })
-                        <button data-id-attr="@todo.Id" class="btn-link js-delete-todo">Delete</button>
-                    </td>
-                </tr>
+                if (todo.UserId == User.Identity.GetUserId())
+                {
+                    <tr class="@(todo.ToDoStatus == ToDoStatus.Open ? "" : "new-color")">
+                        <td>@todo.Name</td>
+                        <td>@todo.Description</td>
+                        <td>@todo.Time.ToString("dd MMM yyy // HH:mm")</td>
+                        <td>@todo.ToDoPriorities.Name</td>
+                        <td class="js-created-todo">@todo.CreatedAt</td>
+                        <td>@todo.UpdatedAt</td>
+                        <td>
+                            <button data-id-attr="@todo.Id" class="btn-link js-status-todo">@todo.ToDoStatus</button>
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit",
+                                "Edit",
+                                "ToDo",
+                                new { id = todo.Id },
+                                new { @class = "btn-link" })
+                            <button data-id-attr="@todo.Id" class="btn-link js-delete-todo">Delete</button>
+                        </td>
+                    </tr>
+                }
+                
                 EmailSender.SendAnHourBefore(todo);
                 EmailSender.SendHalfAnHourBefore(todo);
 
